--- a/src/Pages/Education/Education.css
+++ b/src/Pages/Education/Education.css
@@ -1,7 +1,7 @@
 .education-container {
-  padding: 40px;
+  margin: 0px;
   text-align: center;
-  height: 70vh;
+  height: 0vh;
 }
 
 .education-content {
@@ -61,11 +61,13 @@
   color: #dc3545;
 }
 
-/* Responsive Design */
+
 @media (max-width: 1200px) {
   .education-content {
     flex-direction: column;
     align-items: center;
+    margin: 0px;
+    text-align: center;
   }
 
   .university-list {
@@ -88,7 +90,9 @@
 
 @media (max-width: 768px) {
   .education-container {
-    padding: 20px;
+    padding: 40px;
+    margin: 100px;
+    text-align: center;
   }
 
   .university-list button {
